<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".activity.aadhar.AadharOtpVerification">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="20dp"
        android:background="@color/backgroundColor">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:tint="@color/textColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/back"
            android:fontFamily="sans-serif-medium"
            android:text="@string/aadhar_verification"
            android:textColor="@color/textColor"
            android:textSize="14sp"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/verify_con"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:text="@string/enter_otp"
            android:fontFamily="sans-serif-medium"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textLightColor"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:text="@string/enter_the_otp_received_on_customer_s_aadhar_registered_mobile_number_and_click_on_submit_button_to_validate_customer_s_identity_as_per_aadhar_database"
            android:fontFamily="sans-serif-light"
            android:textSize="10sp"
            android:layout_marginTop="15dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/error_con"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#FF1100"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="10dp"/>

        </androidx.cardview.widget.CardView>


        <EditText
            android:id="@+id/ed_aadhar_otp"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_login"
            android:fontFamily="sans-serif"
            android:hint=""
            android:textColor="@color/textColor"
            android:textSize="38sp"
            android:maxLength="6"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/cursor_black"
            android:textStyle="bold" />


        <RelativeLayout
            android:id="@+id/verify"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/bg_black">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/progress_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="Verify"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:visibility="visible"/>

                <ProgressBar
                    android:id="@+id/progressBar2"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:indeterminateDrawable="@drawable/progressbar_cs_white"
                    android:visibility="gone"/>


            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@color/textLightColor"
            android:fontFamily="sans-serif-light"
            android:text="@string/re_send_otp_in_10_seconds" />

        <TextView
            android:id="@+id/response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/success_con"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="52dp"
        android:visibility="gone"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Aadhar verification success"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-medium"
            android:textSize="22sp" />

    </RelativeLayout>


</RelativeLayout>